--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1394,107 +1394,107 @@ stories:
   domain: http://www.times-news.com/
   link: https://www.times-news.com/opinion/with-just-a-smile-you-can-make-a-difference/article_e9c9adde-2810-11ea-9fc4-53f3ee7252ec.html
 images:
-- name: ellis-island-ellisisland-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-creativity.jpg
-- name: border-crossing-bordercrossing-yellow-paper.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-yellow-paper.png
-- name: berlinwall-DSC-0084-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-blue-circuit.jpg
-- name: stalin-time-creepy-doll-looking-down.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-creepy-doll-looking-down.jpg
-- name: mediterranean-mediterranean-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dark-dali.jpg
-- name: blossombar-sand-paper-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sand-paper-file-00-00-24-99.jpg
-- name: white-house-lawn-white-house-lawn-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-hot-spicy.jpg
-- name: copper-circuit-london-underground-covent-garden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-london-underground-covent-garden.jpg
-- name: bf-skinner-surveillance-over-the-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-surveillance-over-the-city.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-green-zuma.jpg
-- name: braceros-domingo-ulloa-building-shadows-sun.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-building-shadows-sun.jpg
-- name: crow_yellow_collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_yellow_collage.jpg
-- name: copper-circuit-electric-tower-sun-behind.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-electric-tower-sun-behind.jpg
-- name: nazi-invasion-statue-facing-scrunched.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-facing-scrunched.jpg
-- name: old-school-house-old-schoolhouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-aqua.jpg
-- name: sand-hand-sand-hand-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-bright-sand.jpg
-- name: stories-catacombs-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-catacombs-copper-circuit-2.jpg
-- name: copper-circuit-washington-monument-afar.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-washington-monument-afar.jpg
-- name: nazi-invasion-close-to-all-remote-aircraft.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-close-to-all-remote-aircraft.jpg
-- name: bf-skinner-old-broken-piano-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-broken-piano-street.jpg
-- name: adam-smith-adam-smith-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-atari-asteroids.jpg
-- name: beach-clouds-lifeguard-beachclouds-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-spagetti-accident.jpg
-- name: old-granary-field-oldhouse-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-atari-missle.jpg
-- name: adam-smith-adam-smith-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-circuit-4.jpg
-- name: berlinwall2-berlinwall-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-marcel-duchamp.jpg
-- name: meadowbutterfly-meadow-butterfly-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-purple-pond.jpg
-- name: oldhousecars-house-old-cars-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-sunday.jpg
-- name: nyc-flag-nycflag-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-wols.jpg
-- name: rockingchair-rockingchair-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-smoking-cigarette.jpg
-- name: window-window-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dali-three.jpg
-- name: oldroad-old-road-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-smooth-ride.jpg
-- name: christianity-christianity-under-construction-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-pablo-blue.jpg
-- name: nazi-invasion-desktop-laptop-chair.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-desktop-laptop-chair.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-matrix.jpg
-- name: oldhotel-oldhotel-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-ww2-color.jpg
-- name: oldhousecars-house-old-cars-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-attack-planes.jpg
-- name: abe-lincoln-one-satan-red-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-satan-red-file-00-00-15-87.jpg
-- name: gypsymosaic-gypsy-eyes-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-umberto-bocc.jpg
-- name: beach-clouds-lifeguard-beachclouds-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-creativity.jpg
-- name: stories-new-van-gogh-starry-night-container-bridge-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-van-gogh-starry-night-container-bridge-2.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-mucha-mult.jpg
-- name: berlinwall-DSC-0084-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-constitution.jpg
-- name: death-valley-death-valley-national-park-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-internet-numbers.jpg
-- name: old-school-house-old-schoolhouse-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-internet-numbers.jpg
-- name: bf-skinner-people-eating-canal.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-people-eating-canal.jpg
-- name: copper-circuit-frosty-downtown-lights.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-frosty-downtown-lights.jpg
-- name: abe-lincoln-one-sunday-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-00-00.jpg
-- name: rain-princess-bridge-over-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-bridge-over-columbia.jpg
-- name: window-window-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-diego-rivera1.jpg
-- name: amusement-park-amusement-park-2-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-clean-view.jpg
-- name: capital-battle-capitolbattle-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-post-modern.jpg
+- name: aws-s3-riverrapids-riverrapids-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-riverrapids-riverrapids-still-1200.jpg
+- name: old-granary-field-oldhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dark-soul.jpg
+- name: scream-DSC_0027.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0027.jpg
+- name: gypsymosaic-gypsy-eyes-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-purp-paper.jpg
+- name: oldcabin-oldcabin-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-monet-one.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-umberto-bocc.jpg
+- name: copper-circuit-docks-big-cosco-ship.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-docks-big-cosco-ship.jpg
+- name: miamibeach-miamibeach-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-purple-pond.jpg
+- name: oldhotel-oldhotel-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-really-hot.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
+- name: berlinwall-DSC-0084-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-spagetti-accident.jpg
+- name: old-house-oldhouse-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-hot-spicy.jpg
+- name: server-cloud-server-racks-clouds-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-internet-numbers.jpg
+- name: nazi-invasion-thinking-man-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-thinking-man-statue.jpg
+- name: gypsymosaic-gypsy-eyes-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-blue-brush.jpg
+- name: flower-barbed-wire-flower-barbed-wire-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-internet-numbers.jpg
+- name: oldhotel-oldhotel-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-monet-one.jpg
+- name: school-clouds-church-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds.jpg
+- name: adam-smith-adam-smith-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-monet-one.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-copper-circuit.JPG
+- name: gypsymosaic-gypsy-eyes-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-atari-asteroids.jpg
+- name: dragon-desert-desert-dragon-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-purp-paper.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
+- name: bluelake-neo-instinct-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-neo-instinct-file-00-01-17-38.jpg
+- name: white-house-lawn-white-house-lawn-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-creativity.jpg
+- name: hollywood-building-hollywood-building-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-crabapple.jpg
+- name: downtown-los-angeles-downtown-la-rainbow-festival.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-rainbow-festival.JPG
+- name: supreme-court-supremecourt-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-blue-circuit.jpg
+- name: adam-smith-adam-smith-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-cinnamon-rolls.jpg
+- name: machine-road-machine-road-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dali-three.jpg
+- name: oldcabin-store-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-bright-sand.jpg
+- name: server-cloud-server-racks-clouds-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-kandinsky-bv.jpg
+- name: mistywoods-babyfoot-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-clean-view.jpg
+- name: docks-docks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks.jpg
+- name: copper-circuit-please-do-not-feed-the-pigeon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-please-do-not-feed-the-pigeon.jpg
+- name: subway-subway-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-constitution.jpg
+- name: miamibeach-miamibeach-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-purp-paper.jpg
+- name: store-on-corner-oldcabin-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-atari-asteroids.jpg
+- name: machine-road-machine-road-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-china-prop.jpg
+- name: copper-circuit-supreme-court-columns.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-supreme-court-columns.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-oily-mcoilface.jpg
+- name: server-cloud-server-racks-door-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-hot-spicy.jpg
+- name: server-cloud-server-racks-door-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-plentiful.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-satan-red.jpg
+- name: san-francisco-street-view-san-francisco-street-view-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-mucha-mult.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-atari-asteroids.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-atari-asteroids.JPG
+- name: stalin-time-highway-granary_36331800650_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-highway-granary_36331800650_o.jpg
+- name: adam-smith-adam-smith-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-brush.jpg
+- name: gypsy-wagon-gypsywagon-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-monet-one.jpg
+- name: old-school-house-old-schoolhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-really-hot.jpg
+- name: curtain-curtain-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-alberto-giacometti.jpg
 ---
 Businesses Can Reduce Their Environmental Footprint While Increasing Profits.&nbsp;Christian Outreach Center To Provide Free Christmas Baskets.&nbsp;Hightstown Wrestling Sweeps Quad Meet.&nbsp;Closed Morningside Park Pool Could Reopen Elsewhere.&nbsp;Chinas Public Diplomacy On Social Media.&nbsp;Arkansas Georgia Tech Basketball.&nbsp;Amid Swing Through New Hampshire, Tulsi Gabbard Catches A Celtics Game.&nbsp;Lewiston Auto Basketball Holiday Classic.&nbsp;
